fixed legend alignment

--- a/src/components/calendar_view/index.scss
+++ b/src/components/calendar_view/index.scss
@@ -11,7 +11,6 @@
       height: 140px;
       border-right: 1px solid #e6e5e6;
       border-bottom: 1px solid #e6e5e6;
-      padding: 2px 0 0 0;
       box-sizing: border-box;
       &:last-child {
         border-right: 0;
@@ -56,47 +55,34 @@
         }
         .legend {
           display: flex;
-          justify-content: space-around;
+          justify-content: flex-start;
           font-size: 12px;
-          .protein.treatment {
-            background: #add8e6;
-            border-radius: 50%;
-            padding: 3px;
-            width: 24px;
-            text-align: center;
-          }
+          margin-left: 3%;
+          .protein.treatment,
           .deep.conditioning {
             background: #add8e6;
             border-radius: 50%;
             padding: 3px;
             width: 24px;
+            margin-right: 3%;
           }
-          .hair.color {
-            background: #ffb6c1;
-            border-radius: 50%;
-            padding: 3px;
-            text-align: center;
-            width: 24px;
-          }
-          .hair.cut {
-            background: #ffb6c1;
-            border-radius: 50%;
-            padding: 3px;
-            text-align: center;
-            width: 24px;
-          }
+          .hair.color,
+          .hair.cut,
           .clarifying {
             background: #ffb6c1;
             border-radius: 50%;
             padding: 3px;
             text-align: center;
             width: 24px;
+            margin-right: 3%;
           }
         }
       }
       .box-header {
         display: flex;
         justify-content: space-between;
+        margin-right: 3%;
+        margin-left: 3%;
       }
     }
     .sunday {
