--- a/src/components/extended_view/modal.scss
+++ b/src/components/extended_view/modal.scss
@@ -66,13 +66,7 @@
 .content {
   margin: 9px;
   background-color: white;
-  .protein.treatment {
-    background: #add8e6;
-    border-radius: 50%;
-    padding: 8px;
-    font-size: 12px;
-    width: 32px;
-  }
+  .protein.treatment,
   .deep.conditioning {
     background: #add8e6;
     border-radius: 50%;
@@ -80,23 +74,10 @@
     font-size: 12px;
     width: 32px;
     text-align: center;
+    margin-right: 3%;
   }
-  .hair.color {
-    background: #ffb6c1;
-    border-radius: 50%;
-    padding: 8px;
-    font-size: 12px;
-    width: 32px;
-    text-align: center;
-  }
-  .hair.cut {
-    background: #ffb6c1;
-    border-radius: 50%;
-    padding: 8px;
-    font-size: 12px;
-    width: 32px;
-    text-align: center;
-  }
+  .hair.color,
+  .hair.cut,
   .clarifying {
     background: #ffb6c1;
     border-radius: 50%;
@@ -104,18 +85,12 @@
     font-size: 12px;
     width: 32px;
     text-align: center;
+    margin-right: 3%;
   }
 }
 .side-content {
   margin: 4px;
-  .protein.treatment {
-    background: #add8e6;
-    font-size: 10px;
-    border-radius: 50%;
-    padding: 6px;
-    width: 26px;
-    text-align: center;
-  }
+  .protein.treatment,
   .deep.conditioning {
     background: #add8e6;
     font-size: 10px;
@@ -123,23 +98,10 @@
     padding: 6px;
     width: 26px;
     text-align: center;
+    margin-right: 3%;
   }
-  .hair.color {
-    background: #ffb6c1;
-    font-size: 10px;
-    border-radius: 50%;
-    padding: 6px;
-    width: 26px;
-    text-align: center;
-  }
-  .hair.cut {
-    background: #ffb6c1;
-    font-size: 10px;
-    border-radius: 50%;
-    padding: 6px;
-    width: 26px;
-    text-align: center;
-  }
+  .hair.color,
+  .hair.cut,
   .clarifying {
     background: #ffb6c1;
     font-size: 10px;
@@ -147,6 +109,7 @@
     padding: 6px;
     width: 26px;
     text-align: center;
+    margin-right: 3%;
   }
 }
 .btn-wrapper {
@@ -184,7 +147,18 @@
     font-weight: bold;
   }
 }
-.legend-rating-wrapper {
+.row:after {
+  content: '';
   display: flex;
-  justify-content: space-between;
+  clear: both;
+}
+.col1 {
+  float: left;
+  width: 50%;
+  display: flex;
+}
+.col2 {
+  float: left;
+  width: 50%;
+  text-align: right;
 }
